@@ -1,6 +1,6 @@
 Package: crs
 Version: 0.15-27
-Date: 2017-05-06
+Date: 2017-05-16
 Imports: boot, stats, np, quantreg, rgl
 Suggests: logspline, quadprog
 Title: Categorical Regression Splines
